@@ -17,7 +17,6 @@ package com.vaadin.flow.component.upload;
 
 import java.io.OutputStream;
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.List;
@@ -63,7 +62,7 @@ import tools.jackson.databind.node.ObjectNode;
  * @author Vaadin Ltd.
  */
 @Tag("vaadin-upload")
-@NpmPackage(value = "@vaadin/upload", version = "25.0.0-alpha19")
+@NpmPackage(value = "@vaadin/upload", version = "25.0.0-alpha20")
 @JsModule("@vaadin/upload/src/vaadin-upload.js")
 public class Upload extends Component implements HasEnabled, HasSize, HasStyle {
 
@@ -111,15 +110,15 @@ public class Upload extends Component implements HasEnabled, HasSize, HasStyle {
 
         getElement().addEventListener("file-reject", event -> {
             String detailError = event.getEventData().get(eventDetailError)
-                    .asText();
+                    .asString();
             String detailFileName = event.getEventData()
-                    .get(eventDetailFileName).asText();
+                    .get(eventDetailFileName).asString();
             fireEvent(new FileRejectedEvent(this, detailError, detailFileName));
         }).addEventData(eventDetailError).addEventData(eventDetailFileName);
 
         getElement().addEventListener("file-remove", event -> {
             String detailFileName = event.getEventData()
-                    .get(eventDetailFileName).asText();
+                    .get(eventDetailFileName).asString();
             fireEvent(new FileRemovedEvent(this, detailFileName));
         }).addEventData(eventDetailFileName);
 
@@ -350,7 +349,7 @@ public class Upload extends Component implements HasEnabled, HasSize, HasStyle {
         if (accepted == null) {
             return Collections.emptyList();
         }
-        return Arrays.asList(accepted.split(","));
+        return List.of(accepted.split(","));
     }
 
     /**
